infra/k8s/client/debug-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: busybox
    command: ['sleep', '3600']
  restartPolicy: Never
