infra/k8s/client/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quizzieclient-service # Name of the service
spec:
  selector:
    app: quizzie # Match the label defined in the deployment
  ports:
    - name: http # Name for the first port
      protocol: TCP
      port: 3000 # Port on the service (exposed to the outside)
      targetPort: 3000 # Port on the container (matches Dockerfile)
      nodePort: 30001
  type: NodePort # Type of service (LoadBalancer, NodePort, ClusterIP)
